Add content to the sidebar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
   </head>
 
   <body>
-    
+    <div class="container">
+      <div class="sidebar">
+        <div class="logo">
+          <img src="./img/odin-lined.png" alt="Odin Logo" width="380" height="508">
+          <h1>Odin</h1>
+        </div>
+        <p>Photo by <a
+            href="https://unsplash.com/@haliewestphoto?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
+            Halie West</a> on <a
+            href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
+            Unsplash</a>
+        </p>
+      </div>
+    </div>
   </body>
 
 </html>
