Add infomation section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
             Unsplash</a>
         </p>
       </div>
+      <div class="main">
+        <div class="info-section">
+          <p>
+            This is not a real online service! You know you need something like this in your life to help you realize
+            your deepest dreams. Sign up <span>now</span> to get started.
+          </p>
+          <p>You <span>know</span> you want to.</p>
+        </div>
+      </div>
     </div>
   </body>
 
