--- a/index.html
+++ b/index.html
@@ -30,6 +30,43 @@
           </p>
           <p>You <span>know</span> you want to.</p>
         </div>
+        <form action="#">
+          <h2>Let's do this!</h2>
+          <div class="input-container">
+            <div class="form-col">
+              <div class="form-row">
+                <label for="first-name">First Name</label>
+                <input type="text" name="first_name" id="first-name">
+              </div>
+              <div class="form-row">
+                <label for="email">Email</label>
+                <input type="email" name="user_email" id="email">
+              </div>
+              <div class="form-row">
+                <label for="pwd">Password</label>
+                <input type="password" name="pwd" id="pwd">
+              </div>
+            </div>
+            <div class="form-col">
+              <div class="form-row">
+                <label for="last-name">Last Name</label>
+                <input type="text" name="last_name" id="last-name">
+              </div>
+              <div class="form-row">
+                <label for="phone-number">Phone Number</label>
+                <input type="tel" name="phone_number" id="phone-number">
+              </div>
+              <div class="form-row">
+                <label for="confirm-pwd">Confirm Password</label>
+                <input type="password" name="confirm_pwd" id="confirm-pwd">
+              </div>
+            </div>
+          </div>
+          <div class="submit-btn">
+            <button type="submit">Create Account</button>
+          </div>
+        </form>
+        <p>Already have an account? <a href="#">Log in</a></p>
       </div>
     </div>
   </body>
