Rework main section
-Add div to wrap around the final paragraph
in the main section. This will make it easier to
add style rules.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
             <button type="submit">Create Account</button>
           </div>
         </form>
-        <p>Already have an account? <a href="#">Log in</a></p>
+        <div class="login-div">
+          <p>Already have an account? <a href="#">Log in</a></p>
+        </div>
       </div>
     </div>
   </body>
